objects/Related_Campaign__c.object
<CustomObject>
    <description>This object tracks the list of related Campaign that associated with am Event</description>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <formula>Campaign_Name__r.EndDate</formula>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>SME- Lead / Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Campaigns (Campaign)</relationshipLabel>
        <relationshipName>Related_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <formula>Campaign_Name__r.StartDate</formula>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>SME-Event, SME-Event (Non-Targeted)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Campaigns</relationshipLabel>
        <relationshipName>Related_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Related Campaign</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>